kubernetes/blue-green/service-blue.yml
apiVersion: v1
kind: Service
metadata:
  name: movieverse-blue
  namespace: movieverse
  labels:
    app: movieverse
    version: blue
spec:
  type: ClusterIP
  selector:
    app: movieverse
    version: blue
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
