kubernetes/blue-green/service-green.yml
apiVersion: v1
kind: Service
metadata:
  name: movieverse-green
  namespace: movieverse
  labels:
    app: movieverse
    version: green
spec:
  type: ClusterIP
  selector:
    app: movieverse
    version: green
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
